Fixed alignment

--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,7 @@ img {
 .WeatherInfo {
   position: absolute;
   top: 200px;
-  left: 750px;
+  left: 790px;
   line-height: 3;
 }
 
@@ -44,11 +44,18 @@ h3 {
 }
 
 #icon{
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
+  margin: -20px;
   padding: 0;
-
 }
+
+#description {
+  font-size: 18px;
+  text-transform: capitalize;
+  margin-top: 20px;
+}
+
 .WeatherInfo img {
   margin-right: 5px;
   height: 64px;
@@ -60,6 +67,7 @@ h3 {
   font-size: 24px;
   font-weight: 400;
   line-height: 1;
+  margin-top: 20px;
 }
 
 .AdditionalInfo {
